# nouradio-tests

./: CMakeLists.txt  MANIFEST.md  README.md  TestFile.txt  tool.bat
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-nouradio_testConfig.cmake
examples/: all_test_blocks.grc
grc/: CMakeLists.txt  nouradio_test_define_test.block.yml  nouradio_test_enable_disable_blocks.block.yml  nouradio_test_run_command.block.yml  nouradio_test_run_tests_wrapper.block.yml  nouradio_test_screenshot.block.yml  nouradio_test_stop_and_close.block.yml  nouradio_test_stream_watch.block.yml  nouradio_test_variable_change.block.yml
include/gnuradio/nouradio_test/: CMakeLists.txt  api.h
lib/: CMakeLists.txt
python/nouradio_test/: CMakeLists.txt  __init__.py  define_test.py  enable_disable_blocks.py  generate_tests.py  grc_utilities.py  run_command.py  run_tests.py  run_tests_wrapper.py  screenshot.py  stop_and_close.py  stream_watch.py  variable_change.py
python/nouradio_test/bindings/: CMakeLists.txt  python_bindings.cc
